Feat: Networking handling (Nitro & Flash)